--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <button class="btn" onclick="showDicas()">Comece sua jornada</button>
     </div>
 
+    <center>
+
     <!-- Dicas Container -->
     <div class="dicas-container" id="dicas">
         <h2>Dicas de Educação Financeira</h2>
@@ -167,3 +169,5 @@
     </script>
 </body>
 </html>
+
+</center>
