--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         h1 {
             font-family: 'Lobster', sans-serif;
             font-size: 2.5em;
-            color: #FFCC99;
+            color: #FF8C00;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
         .info-box {
@@ -59,7 +59,7 @@
             margin-top: 20px;
         }
         .extra-text h2, .extra-text h3 {
-            color: #FFCC99;
+            color: #FF8C00;
         }
         .extra-text ul {
             list-style-type: none;
@@ -73,7 +73,7 @@
             text-align: left;
         }
         .btn {
-            background-color: #FFCC99;
+            background-color: #FF8C00;
             color: #0B235D;
             padding: 15px 30px;
             font-size: 1.2em;
@@ -102,11 +102,33 @@
             padding: 0;
         }
         .dicas-container ul li {
-            background-color: rgba(255, 255, 255, 0.2);
             margin: 5px 0;
             padding: 10px;
-            border-radius: 5px;
         }
+        .dicas-container {
+            text-align: center;
+        }
+        .dicas-container {
+           text-align: center;
+           max-width: 1000px; /* Define a largura máxima */
+           margin: auto; /* Centraliza o conteúdo na página */
+           padding: 40px;
+           border-radius: 30px;
+}
+        .dicas-container h2 {
+        color: #FF8C00; /* Define a cor laranja apenas para o título */
+}
+         .dicas-container .dicas-texto {
+         background-color: #5D9CEC; /* Azul claro */
+         padding: 20px;
+         border-radius: 10px;
+         color: #ECF0F1; /* Cor do texto para contraste */
+         text-align: center;
+         margin-bottom: 20px;
+}
+ 
+
+
     </style>
 </head>
 <body>
@@ -134,20 +156,22 @@
         <button class="btn" onclick="showDicas()">Comece sua jornada</button>
     </div>
 
-
-    <!-- Dicas Container -->
-    <div class="dicas-container" id="dicas">
-        <h2>Dicas de Educação Financeira</h2>
-       <p>Aqui você encontrarpa dicas de educação financeira para aplicar no dia a dia Embora nem sempre esse processo seja repentino, é importante saber quais os passos importantes para atingir o pleno equilíbrio financeiro. Afinal, por onde é melhor começar? Como deixar de comprar aquela blusa na promoção? Confira.</p>
-        <ul>
-            <li>Comece a economizar o quanto antes, mesmo que seja pouco. O importante é começar!</li>
-            <li>Defina um orçamento mensal para controlar suas despesas e evite gastos desnecessários.</li>
-            <li>Pesquise antes de fazer grandes compras e busque as melhores opções de preços e parcelamentos.</li>
-            <li>Estude sobre investimentos para fazer seu dinheiro trabalhar para você.</li>
-            <li>Mantenha uma reserva de emergência para situações imprevistas.</li>
-        </ul>
-        <button class="btn" onclick="hideDicas()">Voltar</button>
+  <!-- Dicas Container -->
+<div class="dicas-container" id="dicas">
+    <h2>Dicas de Educação Financeira</h2>
+    <div class="dicas-texto">
+        <p>Aqui você encontrará dicas de educação financeira para aplicar no dia a dia. Embora nem sempre esse processo seja repentino, é importante saber quais os passos importantes para atingir o pleno equilíbrio financeiro. Afinal, por onde é melhor começar? Como deixar de comprar aquela blusa na promoção? Confira.</p>
     </div>
+    <ul>
+        <li>Comece a economizar o quanto antes, mesmo que seja pouco. O importante é começar!</li>
+        <li>Defina um orçamento mensal para controlar suas despesas e evite gastos desnecessários.</li>
+        <li>Pesquise antes de fazer grandes compras e busque as melhores opções de preços e parcelamentos.</li>
+        <li>Estude sobre investimentos para fazer seu dinheiro trabalhar para você.</li>
+        <li>Mantenha uma reserva de emergência para situações imprevistas.</li>
+    </ul>
+    <button class="btn" onclick="hideDicas()">Voltar</button>
+</div>
+
 
     <script>
         // Função para exibir as dicas
