--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ function showHome() {
         <div class="info-box">
             <img src="https://img.freepik.com/vetores-premium/icone-de-moeda-dourada-ilustracao-em-desenho-animado-de-dinheiro_138676-2706.jpg?w=740" alt="Imagem do Projeto">
             <div>
-                <p><strong>Bem-vindo ao EduFinanças!</strong><br>Nosso projeto tem como objetivo conscientizar os jovens sobre a importância da educação financeira. Acreditamos que aprender a gerenciar dinheiro desde cedo pode transformar vidas, proporcionando mais segurança, autonomia e oportunidades no futuro. Junte-se a nós nessa jornada de conhecimento e desenvolvimento financeiro!</p>
+                <p><strong>Bem-vindo ao DeepMoney!</strong><br>Nosso projeto tem como objetivo conscientizar os jovens sobre a importância da educação financeira. Acreditamos que aprender a gerenciar dinheiro desde cedo pode transformar vidas, proporcionando mais segurança, autonomia e oportunidades no futuro. Junte-se a nós nessa jornada de conhecimento e desenvolvimento financeiro!</p>
             </div>
         </div>
         <div class="extra-text">
